--- a/home/index.html
+++ b/home/index.html
@@ -308,7 +308,7 @@
     </main>
 
     <footer role="contentinfo">
-      <span class="footer-left footer-note">© 2025 Fishex Ltd</span>
+      <span class="footer-left footer-note">© 2025 Naptio</span>
       <a class="footer-right footer-note" href="https://hungryfaceai.github.io/hungryface/legal">Legal</a>
     </footer>
   </div>
