--- a/legal/index.html
+++ b/legal/index.html
@@ -32,16 +32,21 @@
     .icon { width: var(--icon-size, 24px); height: var(--icon-size, 24px); display: block; }
     .icon-home { --icon-size: 26px; }
 
-    /* ---- Header with centered title (unaffected by logo) ---- */
+    /* ---- Header with centered title + pill stacked vertically ---- */
     header {
       position: sticky; top: 0; z-index: 5;
       background: #000; border-bottom: 1px solid #222;
-      display: grid; grid-template-columns: 1fr auto 1fr;
-      align-items: center; padding: 10px 16px; gap: 12px;
+      display: flex; flex-direction: column; align-items: center;
+      padding: 12px 16px 10px; gap: 6px;
     }
     header .title {
-      grid-column: 2; text-align: center;
+      text-align: center;
       font-size: 18px; letter-spacing: .3px; color: #ddd;
+    }
+    .pill.effective { /* optional fine-tuning for the pill under the title */
+      font-size: 12px;
+      line-height: 1;
+      padding: 2px 8px;
     }
     .header-badge { grid-column: 3; justify-self: end; }
 
@@ -87,8 +92,9 @@
 
   <header>
     <div class="title">Legal, Terms of Use & Privacy Notice</div>
-    <span class="pill header-badge">Effective: 11 Oct 2025</span>
+    <span class="pill effective">Effective: 11 Oct 2025</span>
   </header>
+
 
   <main id="stage">
     <article class="page">
