--- a/webrtc/receiver/help/index.html
+++ b/webrtc/receiver/help/index.html
@@ -130,7 +130,7 @@
             <span class="sr-only">Home</span>
           </a>
 
-          <h1>Naptio — User Guide (Pairing &amp; Use)</h1>
+          <h1>User Guide</h1>
         </div>
       </div>
 
@@ -167,7 +167,7 @@
       </ul>
       <hr/>
 
-      <h2 id="tldr">2) Quick start (TL;DR)</h2>
+      <h2 id="tldr">2) Quick start</h2>
       <ol>
         <li><strong>Pair the devices once</strong> using <em>Pair devices → Share</em> on the Camera device, then open the share link (or scan the QR) on the Viewer device to <em>install</em> the secret.</li>
         <li>On the Camera device, open <em>Camera (Baby)</em> → pick <em>Back camera</em> → tap <em>Start streaming</em>.</li>
@@ -175,7 +175,7 @@
         <li>Keep devices powered and placed safely. Use <em>Alerts</em> and <em>Dashboard</em> to review events.</li>
       </ol>
 
-      <h2 id="qstart">One-page Quick Start</h2>
+      <h2 id="qstart">Summary</h2>
       <div class="quick-card">
         <p><strong>Roles:</strong> one device = <strong>Camera (Baby)</strong>, another = <strong>Viewer (Parent)</strong>.</p>
         <ol>
