--- a/webrtc/receiver/help/index.html
+++ b/webrtc/receiver/help/index.html
@@ -27,11 +27,11 @@
     /* Layout */
     #ui {
       position: relative; z-index: 5; min-height: 100svh;
-      display: flex; align-items: flex-start; justify-content: center;
+      display: flex; align-items: flex-start; justify-content: flex-start;
       padding: 20px;
     }
     .panel {
-      width: min(100%, 1100px);
+      width: 100%; max-width: 1100px;
       background: #0b0b0b; color: #eaeaea;
       border: 1px solid #1b1b1b; border-radius: 16px;
       box-shadow: 0 0 0 1px #0a0a0a inset, 0 8px 24px rgba(0,0,0,0.5);
