--- a/webrtc/receiver/help/index.html
+++ b/webrtc/receiver/help/index.html
@@ -27,7 +27,7 @@
     /* Layout */
     #ui {
       position: relative; z-index: 5; min-height: 100svh;
-      display: flex; align-items: flex-start; justify-content: flex-start;
+      display: flex; align-items: flex-start; justify-content: center;
       padding: 20px;
     }
     .panel {
