--- a/webrtc/receiver/help/index.html
+++ b/webrtc/receiver/help/index.html
@@ -212,7 +212,7 @@
     <main class="panel" role="main">
       <div class="header">
         <div class="header-row">
-          <h1>User guide</h1>
+          <h1 style="padding-left:2ch">User guide</h1>
         </div>
       </div>
 
