--- a/webrtc/pairpsk/index.html
+++ b/webrtc/pairpsk/index.html
@@ -181,7 +181,10 @@
   <div id="toast" class="invite-toast" aria-live="polite"></div>
 
   <script type="module">
+    import { ensureTermsAccepted } from '/hungryface/legal/require-terms.js';
     import { ensurePskForRoom, getPsk } from '/hungryface/webrtc/shared/psk/psk-ws-shim.js';
+
+    await ensureTermsAccepted({ role: 'pair' });
 
     // ---- Elements
     const roomEl = document.getElementById('room');
