--- a/about/index.html
+++ b/about/index.html
@@ -177,9 +177,9 @@
         <section class="panel" aria-labelledby="start-en">
           <h2 id="start-en">Getting started in a minute</h2>
           <ol>
+            <li>Use <em>Pair devices</em> to connect two devices.</li>
             <li>On the device near the crib, open the camera page and allow camera/mic.</li>
             <li>On your other device, open a viewer page.</li>
-            <li>Use <em>Pair devices</em> to connect them.</li>
           </ol>
           <div class="cta-row">
             <a class="btn-pill btn-accent" href="/hungryface/webrtc/pairpsk/">Pair devices</a>
@@ -202,9 +202,9 @@
 
         <section class="panel" aria-labelledby="team-en">
           <h2 id="team-en">The Naptio team</h2>
-          <p>We’re a small team dedicated to building state-of-the-art, privacy-first tools for families.
+          <p>We are a team dedicated to building state-of-the-art, privacy-first tools for families.
             We’re parents ourselves, and we care deeply about keeping Naptio friendly, trustworthy, and
-            available to everyone — for free.</p>
+            available to everyone, for free.</p>
           <p class="muted">Thank you for trying Naptio. If there’s something we can improve, we’d love to hear from you.</p>
         </section>
 
