--- a/home/index.html
+++ b/home/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Naptio – Landing</title>
+  <title>Naptio — Privacy-first AI Baby Monitor (no sign-up, no cloud video)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Naptio is a privacy-first baby monitor. Two phones, local connection, on-device AI for cry and motion alerts—no cloud video, no extra hardware." />
+  <meta name="description" content="Turn two devices into a private baby monitor. Local connection, on-device AI for cry & motion alerts. No sign-up, no cloud video.">
   <style>
     :root { color-scheme: dark; }
 
@@ -43,6 +43,8 @@
       padding: 14px 20px;
       gap: 12px;
     }
+    /* Safe-area insets on the sides */
+    header { padding-left: max(20px, env(safe-area-inset-left)); padding-right: max(20px, env(safe-area-inset-right)); }
 
     .nav-left, .nav-center, .nav-right {
       display: flex; gap: 18px; align-items: center;
@@ -80,24 +82,24 @@
       font-weight: 600; line-height: 1; display: inline-block; opacity: 1; white-space: nowrap;
       font-size: clamp(0.78rem, 2.6vw, 0.95rem);
       padding: clamp(6px, 1.6vw, 8px) clamp(10px, 3.2vw, 14px);
-      transition: background-color .15s ease, box-shadow .15s ease; /* ← add this */
+      transition: background-color .15s ease, box-shadow .15s ease;
     }
-
-    /* Subtle hover/focus cue for Pair / Share pills */
     .btn-pill:hover,
     .btn-pill:focus {
-      background: #141414;                 /* deeper change than #0d0d0d */
-      border-color: #e6e6e6;               /* slight border lift for contrast */
-      box-shadow: inset 0 0 0 2px rgba(255,255,255,0.16); /* faint inner ring */
+      background: #141414;
+      border-color: #e6e6e6;
+      box-shadow: inset 0 0 0 2px rgba(255,255,255,0.16);
     }
-
     .btn-pill:focus-visible { outline: 2px solid #fff; outline-offset: 3px; }
 
     main { flex: 1; display: grid; place-items: center; padding: 24px; text-align: center; }
     .hero { max-width: 900px; }
     .brand {
       font-size: clamp(2.5rem, 6vw, 5rem);
-      line-height: 1.05; letter-spacing: 0.02em; margin: 0 0 12px;
+      line-height: 1.05; letter-spacing: -0.012em; margin: 0 0 12px;
+      font-weight: 900;
+      text-rendering: optimizeLegibility;
+      -webkit-font-smoothing: antialiased;
     }
     .tagline { font-size: clamp(1.05rem, 2.5vw, 1.5rem); margin: 0 0 12px; opacity: 0.95; }
 
@@ -119,11 +121,49 @@
     /* Safety note (smaller, centered) */
     .safety-note { font-size: 0.8rem; opacity: 0.8; margin-top: 24px; text-align: center; }
 
+    /* --- HERO CTAs --- */
+    .hero-ctas {
+      display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;
+      margin-top: 16px;
+    }
+    .btn {
+      appearance: none; border: 0; border-radius: 9999px; padding: 12px 16px;
+      font-size: 16px; cursor: pointer; line-height: 1; font-weight: 600;
+    }
+    .btn-primary {
+      background: #fff; color: #000;
+    }
+    .btn-primary:focus-visible { outline: 2px solid #7aa2ff; outline-offset: 2px; }
+    .btn-ghost {
+      background: rgba(255,255,255,0.12); color: #fff; border: 1px solid rgba(255,255,255,0.25);
+    }
+    .btn-ghost:focus-visible { outline: 2px solid #7aa2ff; outline-offset: 2px; }
+
+    /* Hero "Pair devices" should mirror Camera (no underline + light grey on hover) */
+    .hero-ctas .btn {
+      display: inline-block;                  /* matches .nav-center a layout */
+      transition: background-color .15s ease; /* subtle feedback */
+    }
+    .hero-ctas .btn,
+    .hero-ctas .btn:hover,
+    .hero-ctas .btn:focus { text-decoration: none; }
+    
+    .hero-ctas .btn-primary { 
+      border: 1px solid #fff;                 /* optional: visually match Camera pill */
+    }
+    .hero-ctas .btn-primary:hover {
+      background: #eaeaea;                    /* same grey as Camera pill */
+      color: #000;
+    }
+    
     /* Footer */
     footer {
       display: flex; justify-content: space-between; align-items: center;
       padding: 16px 20px; font-size: 0.9rem; opacity: 0.85;
     }
+    /* Safe-area insets on the sides */
+    footer { padding-left: max(16px, env(safe-area-inset-left)); padding-right: max(16px, env(safe-area-inset-right)); }
+
     .footer-note {
       font-family: -apple-system, system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       font-size: 0.75rem; color: #fff; opacity: 0.85; text-decoration: none;
@@ -215,36 +255,14 @@
     }
     .invite-toast.show { opacity: 1; transform: translateX(-50%) translateY(0); }
 
-    /* Force two-row header in iPhone landscape (and other narrow landscapes) */
-    @media (max-width: 900px) and (orientation: landscape) {
-      header {
-        grid-template-columns: 1fr 1fr;
-        grid-auto-rows: minmax(0, auto);
-        row-gap: 10px;
-      }
-      .nav-left  { grid-column: 1; grid-row: 1; justify-self: start; }
-      .nav-right { grid-column: 2; grid-row: 1; justify-self: end; gap: 10px; }
+    /* ---- Scroll-aware header Pair CTA ---- */
+    .header-pair { display: none; }
+    .header-pair.is-sticky { display: inline-block; }
 
-      /* Modes go on their own row, full width, centered */
-      .nav-center{
-        grid-column: 1 / -1;
-        grid-row: 2;
-        justify-content: center;
-        gap: 12px;
-        width: 100%;
-      }
-
-      /* Make mode buttons a bit bigger than Pair/Share */
-      .nav-center a {
-        font-size: clamp(0.92rem, 2.2vw, 1.12rem);
-        padding: clamp(8px, 1.8vw, 12px) clamp(14px, 3.2vw, 18px);
-      }
-
-      /* Keep right-side pills compact so they never collide */
-      .btn-pill {
-        font-size: clamp(0.78rem, 1.8vw, 0.92rem);
-        padding: clamp(6px, 1.2vw, 8px) clamp(10px, 2.2vw, 14px);
-      }
+    /* Reduced-motion: neutralize transitions/animations */
+    @media (prefers-reduced-motion: reduce){
+      .btn-pill, .invite-toast, .yt-modal, .yt-player, .hero-ctas .btn { transition: none !important; animation: none !important; }
+      html:focus-within { scroll-behavior: auto; }
     }
   </style>
 </head>
@@ -262,10 +280,10 @@
       </nav>
 
       <nav class="nav-center" aria-label="Modes">
-        <a href="https://hungryfaceai.github.io/hungryface/webrtc/sender/secure/" aria-label="Camera (Baby) — sender" role="button">
+        <a href="https://hungryfaceai.github.io/hungryface/webrtc/sender/secure/" aria-label="Camera (Baby) — sender">
           Camera (Baby)
         </a>
-        <a href="https://hungryfaceai.github.io/hungryface/webrtc/receiver/shared/alerts/dashboard/" aria-label="Viewer (Parent) — receiver" role="button">
+        <a href="https://hungryfaceai.github.io/hungryface/webrtc/receiver/shared/alerts/dashboard/" aria-label="Viewer (Parent) — receiver">
           Viewer (Parent)
         </a>
       </nav>
@@ -274,7 +292,7 @@
         <a class="is-hidden" href="https://hungryfaceai.github.io/hungryface/login">Log in</a>
         <a class="is-hidden" href="https://hungryfaceai.github.io/hungryface/signup">Sign up</a>
 
-        <a class="btn-pill" href="https://hungryfaceai.github.io/hungryface/webrtc/pairpsk/" aria-label="Pair devices — quick pairing" role="button">
+        <a class="btn-pill header-pair" href="https://hungryfaceai.github.io/hungryface/webrtc/pairpsk/" aria-label="Pair devices — quick pairing">
           Pair devices
         </a>
 
@@ -300,6 +318,20 @@
           On-device AI spots cues and motion, so you get timely, private alerts.<br>
           No cloud video, no extra hardware, no login.
         </p>
+
+        <!-- HERO CTAs -->
+        <div class="hero-ctas" role="group" aria-label="Get started">
+          <a class="btn btn-primary" href="https://hungryfaceai.github.io/hungryface/webrtc/pairpsk/">Pair devices</a>
+          <a class="btn btn-ghost" href="/hungryface/home/demo/" aria-label="Watch demo">
+            ▶ Watch demo
+          </a>
+        </div>
+
+        <!-- Helper text under CTAs -->
+        <p class="safety-note" style="margin-top:10px;opacity:.85">
+          First time? Tap <strong>Pair devices</strong>. Already paired? Open <strong>Camera</strong> or <strong>Viewer</strong>.
+        </p>
+
         <p class="safety-note">
           Naptio provides informational insights and is not a medical device. <br>
           Always supervise your baby.
@@ -313,7 +345,7 @@
     </footer>
   </div>
 
-  <!-- Invite Modal -->
+  <!-- Invite Modal (unchanged structure; with focus trap added in JS) -->
   <div id="invite-modal" class="invite-modal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="invite-title">
     <div class="invite-card">
       <button type="button" class="invite-close" aria-label="Close">
@@ -337,7 +369,7 @@
   </div>
 
   <script>
-  // Standalone Invite Modal (same logic as before, with × close)
+  // Standalone Invite Modal (existing) + focus trap
   (() => {
     const trigger  = document.getElementById('menu-invite');
     const modal    = document.getElementById('invite-modal');
@@ -368,7 +400,34 @@
       }, 1400);
     }
 
+    let lastFocused = null;
+    let trapHandler = null;
+
+    function enableTrap() {
+      const focusables = modal.querySelectorAll('a[href], button, input, textarea, select, [tabindex]:not([tabindex="-1"])');
+      const list = Array.from(focusables).filter(el => !el.hasAttribute('disabled') && el.tabIndex !== -1);
+      if (!list.length) return;
+      const first = list[0];
+      const last = list[list.length - 1];
+      trapHandler = (e) => {
+        if (e.key !== 'Tab') return;
+        if (e.shiftKey && document.activeElement === first) { e.preventDefault(); last.focus(); }
+        else if (!e.shiftKey && document.activeElement === last) { e.preventDefault(); first.focus(); }
+      };
+      modal.addEventListener('keydown', trapHandler);
+      (btnClose || first || modal).focus();
+    }
+
+    function disableTrap() {
+      if (trapHandler) {
+        modal.removeEventListener('keydown', trapHandler);
+        trapHandler = null;
+      }
+    }
+
     function openInvite() {
+      lastFocused = document.activeElement;
+
       const url = INVITE_URL;
       if (qrImg) {
         qrImg.src = QR_ENDPOINT + encodeURIComponent(url);
@@ -387,11 +446,14 @@
       modal.setAttribute('aria-hidden', 'false');
 
       document.addEventListener('keydown', onEsc, { once: true });
+      enableTrap();
     }
 
     function closeInvite() {
       modal.classList.remove('visible');
       modal.setAttribute('aria-hidden', 'true');
+      disableTrap();
+      lastFocused?.focus?.();
     }
 
     function onEsc(e) { if (e.key === 'Escape') closeInvite(); }
@@ -448,31 +510,49 @@
     }
   })();
   </script>
+
+  <!-- Scroll-aware header Pair CTA (hide over hero, show after scroll) -->
+  <script>
+    (() => {
+      const hero = document.querySelector('.hero');
+      const headerPair = document.querySelector('.header-pair');
+      if (!hero || !headerPair || !('IntersectionObserver' in window)) return;
+
+      const io = new IntersectionObserver(([entry]) => {
+        const heroInView = entry.isIntersecting && entry.intersectionRatio > 0;
+        headerPair.classList.toggle('is-sticky', !heroInView);
+      }, { threshold: 0.2 });
+
+      io.observe(hero);
+    })();
+  </script>
+
+  <!-- Set aria-current on About when that page is active (header reused across pages) -->
+  <script>
+    (() => {
+      const aboutLink = document.querySelector('nav.nav-left a[href*="/about"]');
+      if (!aboutLink) return;
+      try {
+        const loc = location.pathname.replace(/\/+$/, '');
+        if (loc.endsWith('/about')) aboutLink.setAttribute('aria-current','page');
+      } catch {}
+    })();
+  </script>
+
   <script type="module">
-  import { installLandingPairGate } from '/hungryface/home/landing-pair-gate.js';
+    import { installLandingPairGate } from '/hungryface/home/landing-pair-gate.js';
+    installLandingPairGate({
+      cameraSelector: 'nav.nav-center a[href*="/webrtc/sender/secure/"]',
+      viewerSelector: 'nav.nav-center a[href*="/webrtc/receiver/shared/alerts/dashboard/"]',
+      pairRoute: '/hungryface/webrtc/pairpsk/',
+    });
+  </script>
 
-  installLandingPairGate({
-    cameraSelector: 'nav.nav-center a[href*="/webrtc/sender/secure/"]',
-    viewerSelector: 'nav.nav-center a[href*="/webrtc/receiver/shared/alerts/dashboard/"]',
-    pairRoute: '/hungryface/webrtc/pairpsk/',
-
-    // Optional overrides (you can omit these)
-    // validateToken: (b64u) => { /* return true if >=16 bytes, etc. */ },
-    // detectHasAnyPsk: (ls) => { /* scan ls for 'psk:' keys */ },
-    // copy: {
-    //   sublineCamera: 'Before you use Camera mode, let’s pair your {nounPlural}.',
-    //   sublineViewer: 'Before you use Viewer mode, let’s pair your {nounPlural}.',
-    // },
-    // onEvent: (name, data) => console.log('[pair-gate]', name, data),
-  });
-</script>
-  
-<!-- analytics -->
-<script type="module">
-  import { installAnalytics } from '/hungryface/shared/analytics.js';
-  window.analytics = installAnalytics({ feature: 'naptio-home' });
-  // Later: window.analytics.event('landing_opened');
-</script>
-  
+  <!-- analytics -->
+  <script type="module">
+    import { installAnalytics } from '/hungryface/shared/analytics.js';
+    window.analytics = installAnalytics({ feature: 'naptio-home' });
+    // window.analytics.event('landing_opened');
+  </script>
 </body>
 </html>
